# async_lessons

./: README.md  lesson_1.py  pyproject.toml
lessons/lesson_1/: task_1.py  task_2.py  task_3.py  task_4.py  task_5.py
lessons/lesson_2/: 2_sync.py  lesson.py
utils/: decorators.py
