[tool.poetry]
name = "async-les"
version = "1.0"
description = "my first async project"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "^3.1.0"
aiosqlite3 = "^0.3.0"
tinkoff = "^0.1.1"
tinkoff-investments = "^0.2.0b60"
response = "^0.5.0"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
